SupportAssignments: Fixing header phrasing/alignment

--- a/app/supportAssignment/directives/supportAssignmentTable/supportCoursesTab/supportCoursesTab.css
+++ b/app/supportAssignment/directives/supportAssignmentTable/supportCoursesTab/supportCoursesTab.css
@@ -39,3 +39,7 @@
 .support-courses-tab__spacer {
 	padding-bottom: 10px;
 }
+
+.support-courses-tab__assigned-header {
+	padding-left: 80px;
+}
